1.10.0 (XXX XX, 2023)
 - Bugfixing - Removed check of hooks availability to follow rules of hooks. If attempting to use hooks with React below version 16.8.0, an error will be thrown rather than logging an error message.

1.9.0 (July 18, 2023)
 - Updated some transitive dependencies for vulnerability fixes.
 - Updated @splitsoftware/splitio package to version 10.23.0 that includes:
      - Updated streaming architecture implementation to apply feature flag updates from the notification received which is now enhanced, improving efficiency and reliability of the whole update system.

1.8.3 (May 16, 2023)
 - Updated @splitsoftware/splitio package to version 10.22.5 that includes:
      - Updated terminology on the SDKs codebase to be more aligned with current standard without causing a breaking change. The core change is the term split for feature flag on things like logs and IntelliSense comments.
      - Updated some transitive dependencies for vulnerability fixes.

1.8.2 (April 3, 2023)
 - Updated linter dependencies and rules. The deprecated TSLint package was replaced by ESLint.
 - Updated some transitive dependencies for vulnerability fixes.
 - Updated @splitsoftware/splitio package to version 10.22.4 that includes minor improvements.

1.8.1 (December 16, 2022)
 - Updated some transitive dependencies for vulnerability fixes.
 - Bugfixing - Upgrade @splitsoftware/splitio dependency to version 10.22.3 which includes a memory leak fix for localhost mode (Related to issue https://github.com/splitio/javascript-commons/issues/181) among other improvements.

1.8.0 (October 5, 2022)
 - Updated @splitsoftware/splitio dependency to version 10.22.0, which includes: